get rid from java list